feat: melhorando tags para SEO

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <title>
+      Aprimorar | Espaço Multidisciplinar de Aprendizagem na Asa Sul
+    </title>
+
+    <meta
+      name="description"
+      content="O Aprimorar é um espaço multidisciplinar de aprendizagem na Asa Sul, com acompanhamento educacional individualizado, foco em método de estudo e desenvolvimento integral do aluno."
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aprimorar</title>
+
+    <!-- SEO social -->
+    <meta property="og:title" content="Aprimorar | Espaço Multidisciplinar de Aprendizagem" />
+    <meta
+      property="og:description"
+      content="Acompanhamento educacional individualizado para desenvolver métodos de estudo e potencializar o aprendizado."
+    />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" type="image/png" href="/LogoSemTexto.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
